fix: discounts visibility

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -19,11 +19,16 @@ html {
   background: $background;
 }
 
-.discounts {
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 10rem;
-  flex-flow: column;
+@media (max-width: 600px) {
+
+  .discounts {
+    visibility: visible;
+  }
+}
+
+@media (min-width: 601px) {
+
+  .discounts {
+    visibility: hidden;
+  }
 }
